implement fetching system locale, decouple webview component, save window pos, fix collage generator, other fixes